--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             padding: 6px 10px;
             border-radius: 5px;
             position: absolute;
-            bottom: 125%;
+            top: 125%;
             left: 0;
             z-index: 10;
             white-space: pre-wrap;
