--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <span class="tooltip-word" data-word=""></span>
         <span class="tooltip-word" data-word="MOE">MOE</span> releases guidelines for school cellphone use. While cellphones
         can help accelerate learning, schools must
-        find a balance to avoid the harmful effects of social media and addiction, the ministry said.
+        find a balance to avoid the harmful effects of <span class="tooltip-word" data-word="social media">social media</span> and addiction, the ministry said.
     </div>
 </body>
 
