--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="revised" content="2025/07/03">
-    <title>News 4</title>
+    <title>News</title>
     <style>
         /* 頁面框架 */
         .container {
