--- a/news.html
+++ b/news.html
@@ -22,12 +22,12 @@
         h1 {
             text-align: center;
             font-weight: bold;
-            font-size: 30pt;
+            font-size: 3rem;
             color: red;
         }
 
         p {
-            font-size: 20pt;
+            font-size: 2rem;
             font-family: "微軟正黑體";
         }
 
@@ -39,9 +39,12 @@
         .source {
             text-decoration: none;
         }
-        a{
+
+        a {
             text-decoration: none;
-            font-size: 20pt;
+            font-size: 2rem;
+            word-break: break-all;
+           /*  overflow-wrap: break-word; */
         }
 
 
@@ -97,7 +100,7 @@
                 group: ["groups"],
                 begin: ["beginning"],
                 situation: ["situations"],
-                board:["boards"],
+                board: ["boards"],
                 ttest: ["ttest"]
             };
 
