--- a/news.html
+++ b/news.html
@@ -73,6 +73,7 @@
             /* white-space: nowrap; */
             width: max-content;
             /*  max-width: 100%; */
+            font-size: 3rem;
         }
 
         .tooltip-word:hover .tooltip-box {
