--- a/news.html
+++ b/news.html
@@ -11,7 +11,8 @@
             display: flex;
         }
 
-        .sideLeft .sideRight {
+        .sideLeft,
+        .sideRight {
             width: 10%;
         }
 
