--- a/news.html
+++ b/news.html
@@ -289,7 +289,7 @@
 
 <body>
     <div class="container">
-        <div class="sideLeft"></div>
+        <div class="sideLeft">03:51:40</div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
         </div>
