--- a/news.html
+++ b/news.html
@@ -256,40 +256,18 @@
             article.innerHTML = html;
 
             // hover + 點擊事件控制 active 狀態
-            document.querySelectorAll(".tooltip-word").forEach(span => {
+            /* document.querySelectorAll(".tooltip-word").forEach(span => {
                 // 滑鼠 hover（桌機）
                 span.addEventListener("mouseenter", () => span.classList.add("active"));
                 span.addEventListener("mouseleave", () => span.classList.remove("active"));
-
-                /* // 手機點擊觸發（避免 hover 沒效果）
-                span.addEventListener("click", () => {
-                    document.querySelectorAll(".tooltip-word").forEach(other => {
-                        if (other !== span) {
-                            other.classList.remove("active");
-                            const tip = other.querySelector(".tooltip-box");
-                            if (tip) {
-                                tip.style.visibility = "hidden";
-                                tip.style.opacity = 0;
-                            }
-                        }
-                    });
-
-                    span.classList.toggle("active");
-                    const tooltip = span.querySelector(".tooltip-box");
-                    if (tooltip) {
-                        const visible = tooltip.style.visibility === "visible";
-                        tooltip.style.visibility = visible ? "hidden" : "visible";
-                        tooltip.style.opacity = visible ? 0 : 1;
-                    }
-                }); */
-            });
+            }); */
         });
     </script>
 </head>
 
 <body>
     <div class="container">
-        <div class="sideLeft">Update Time: 04:24:21</div>
+        <div class="sideLeft">Update Time: 04:34:21</div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
         </div>
