--- a/news.html
+++ b/news.html
@@ -256,18 +256,18 @@
             article.innerHTML = html;
 
             // hover + 點擊事件控制 active 狀態
-            /* document.querySelectorAll(".tooltip-word").forEach(span => {
+            document.querySelectorAll(".tooltip-word").forEach(span => {
                 // 滑鼠 hover（桌機）
                 span.addEventListener("mouseenter", () => span.classList.add("active"));
                 span.addEventListener("mouseleave", () => span.classList.remove("active"));
-            }); */
+            });
         });
     </script>
 </head>
 
 <body>
     <div class="container">
-        <div class="sideLeft">Update Time: 04:34:21</div>
+        <div class="sideLeft">Update Time: 04:36:38</div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
         </div>
