--- a/news.html
+++ b/news.html
@@ -63,6 +63,7 @@
             border-bottom: 1px dotted #555;
             transition: background-color 0.2s;
             /* 讓 active 狀態變色有動畫 */
+            
         }
 
         /* tooltip 被觸發時單字背景變色 */
@@ -77,9 +78,10 @@
         .tooltip-box {
             visibility: hidden;
             background-color: #333;
+
             color: #fff;
             padding: 4px 8px;
-            border-radius: 4px;
+            border-radius: 10px;
             position: absolute;
             top: 125%;
             left: 50%;
@@ -89,22 +91,24 @@
             z-index: 1;
 
             display: inline-block;
+            
 
-            white-space: pre-wrap;
             /* 【修改】改為支援換行 */
-            width: max-content;
+            white-space: pre-wrap;
             /* 讓寬度隨內容調整 */
-            max-width: 90vw;
+            width: max-content;
             /* 限制最大寬度不超出螢幕 */
-            word-break: break-word;
+            max-width: 90vw;
             /* 處理長字串與網址換行 */
-            overflow-wrap: break-word;
+            word-break: break-word;
             /* 同上 */
-            box-sizing: border-box;
+            overflow-wrap: break-word;
             /* padding 包含在寬度內 */
-            font-size: 0.95rem;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+            box-sizing: border-box;
+            /* 字體大小 */
+            font-size: 1.25rem;
             /* 輕微陰影提升可讀性 */
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
         }
 
         /* 滑鼠懸停時顯示 tooltip（桌機用） */
@@ -267,7 +271,7 @@
 
 <body>
     <div class="container">
-        <div class="sideLeft">Update Time: 04:36:38</div>
+        <div class="sideLeft">Update Time: 20:08:42</div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
         </div>
