--- a/news.html
+++ b/news.html
@@ -161,7 +161,7 @@
                 device: "n. (電子)裝置/器械",
                 campus: "n. 校園",
                 minor: "n. 未成年人",
-                guardian: "n. 監護人，此字含有保護者、護衛者、維護者之義",
+                guardian: "n. 監護人\n此字含有保護者、護衛者、維護者之義",
                 below: "prep. (年紀、溫度、成績等)小於、低於，\n此指「年紀低於」",
                 similar: "adj. 類似的、相近的，\n「similar device」指「平板電腦」等電子產品",
                 flexibility: "n. 彈性",
@@ -271,7 +271,7 @@
 
 <body>
     <div class="container">
-        <div class="sideLeft">Update Time: 20:14:23</div>
+        <div class="sideLeft">Update Time: 20:29:42</div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
         </div>
