--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
         /* 頁面框架 */
         html {
             font-size: clamp(14px, 2vw, 18px);
-            background-image: url("paper.png");
+            background-image: url("images/paper.png");
         }
 
         .container {
@@ -304,7 +304,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>22:33:17</p>
+            <p>22:34:17</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
