--- a/news.html
+++ b/news.html
@@ -226,7 +226,7 @@
                 eliminate: "v. 消除/清除",
                 intervening: "adj. 介於...其中的。此處指2/11~13介於兩個假期之間",
                 consecutive: "adj. 連續的/連貫的",
-                holiday: "n. 法定假日",
+                holiday: "n. 國定假日",
                 adjustment: "n. 調整",
                 option: "n. 選擇/選項/方案，此處「one option」指「其中一個方案」",
                 hold: "v. 安排/舉行",
