--- a/news.html
+++ b/news.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="revised" content="2025/07/03">
     <title>News</title>
+
+    <link rel="stylesheet" href="styles.css">
     <style>
         /* 頁面框架 */
         html {
@@ -16,13 +18,15 @@
             display: flex;
         }
 
-        .sideLeft,
+        .sideLeft{
+            width: 10%;
+        }
         .sideRight {
-            width: 12%;
+            width: 9%;
         }
 
         .center {
-            width: 76%;
+            width: 81%;
         }
 
         .textCenter {
@@ -304,7 +308,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>22:41:37</p>
+            <p>22:56:07</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
