--- a/news.html
+++ b/news.html
@@ -305,18 +305,18 @@
 <body>
     <a href="https://micante0701.github.io/news" class="floating-home-btn">🏠</a>
     <div class="container">
-        <div class="sideLeft textCenter">
+        <div class="sideLeft textCenter" style="background-color: lightblue;">
             <p>Update Time</p>
             <p>23:21:56</p>
         </div>
-        <div class="center title">
+        <div class="center title" style="background-color: lightcoral;">
             <h1>MOE releases guidelines for school cellphone use</h1>
         </div>
-        <div class="sideRight"></div>
+        <div class="sideRight" style="background-color: lightblue;"></div>
     </div>
     <div class="container">
         <div class="sideLeft"></div>
-        <div class="center" id="article">
+        <div class="center" id="article" style="background-color: lightgreen;">
             <div class="textStyle">
                 <p class="subTitle">BALANCING ACT: While cellphones can help accelerate learning, schools must find a
                     balance to avoid
@@ -385,7 +385,7 @@
                 <p>Additional reporting by Rachel Lin</p>
             </div>
         </div>
-        <div class="sideRight"></div>
+        <div class="sideRight" style="background-color: lightskyblue;"></div>
     </div>
     <div class="container">
         <div class="sideLeft"></div>
