--- a/news.html
+++ b/news.html
@@ -312,7 +312,7 @@
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
         </div>
-        <div class="sideRight" style="background-color: lightblue;"></div>
+        <div class="sideRight"></div>
     </div>
     <div class="container">
         <div class="sideLeft"></div>
