--- a/news.html
+++ b/news.html
@@ -18,9 +18,10 @@
             display: flex;
         }
 
-        .sideLeft{
+        .sideLeft {
             width: 10%;
         }
+
         .sideRight {
             width: 10%;
         }
@@ -42,7 +43,7 @@
         }
 
         .textStyle {
-            font-size: 1.75rem;
+            font-size: 2rem;
             font-family: "微軟正黑體";
             text-align: justify;
         }
@@ -52,12 +53,9 @@
             text-align: center;
         }
 
+        /* 副標題 */
         .subTitle {
             font-weight: bold;
-        }
-
-        .source {
-            text-decoration: none;
         }
 
         a {
@@ -108,9 +106,9 @@
             /* 【修改】改為支援換行 */
             white-space: pre-wrap;
             /* 讓寬度隨內容調整 */
-            width: max-content;
+            /* width: max-content; */
             /* 限制最大寬度不超出螢幕 */
-            max-width: 90vw;
+            /* max-width: 90vw; */
             /* 處理長字串與網址換行 */
             word-break: break-word;
             /* 同上 */
@@ -307,7 +305,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>1</p>
+            <p>23:21:56</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
