--- a/news.html
+++ b/news.html
@@ -106,7 +106,7 @@
             /* 【修改】改為支援換行 */
             white-space: pre-wrap;
             /* 讓寬度隨內容調整 */
-            /* width: max-content; */
+            width: max-content;
             /* 限制最大寬度不超出螢幕 */
             /* max-width: 90vw; */
             /* 處理長字串與網址換行 */
