--- a/news.html
+++ b/news.html
@@ -108,9 +108,9 @@
             /* 讓寬度隨內容調整 */
             width: max-content;
             /* 限制最大寬度不超出螢幕 */
-            /* max-width: 90vw; */
+            max-width: 90vw;
             /* 處理長字串與網址換行 */
-            word-break: break-word;
+            /* word-break: break-word; */
             /* 同上 */
             overflow-wrap: break-word;
             /* padding 包含在寬度內 */
@@ -305,7 +305,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>23:21:56</p>
+            <p>2</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
