--- a/news.html
+++ b/news.html
@@ -82,6 +82,7 @@
             border-bottom-color: #999;
             color: red;
             font-weight: bold;
+            font-size: 1.95rem;
         }
 
         /* tooltip 內容樣式 */
@@ -110,7 +111,7 @@
             /* 限制最大寬度不超出螢幕 */
             max-width: 90vw;
             /* 處理長字串與網址換行 */
-            /* word-break: break-word; */
+            word-break: break-word;
             /* 同上 */
             overflow-wrap: break-word;
             /* padding 包含在寬度內 */
@@ -305,7 +306,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>2</p>
+            <p>5</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
