--- a/news.html
+++ b/news.html
@@ -109,7 +109,7 @@
             /* 讓寬度隨內容調整 */
             width: max-content;
             /* 限制最大寬度不超出螢幕 */
-            max-width: 90vw;
+            /* max-width: 90vw; */
             /* 處理長字串與網址換行 */
             word-break: break-word;
             /* 同上 */
@@ -306,7 +306,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>5</p>
+            <p>7</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
