--- a/news.html
+++ b/news.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         /* 頁面框架 */
+        * {
+            box-sizing: border-box;
+        }
+
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+        }
+
         html {
             font-size: clamp(14px, 2vw, 18px);
             background-image: url("images/paper.png");
@@ -306,7 +316,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>9</p>
+            <p>10</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
