--- a/news.html
+++ b/news.html
@@ -132,6 +132,16 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
         }
 
+        .sideLeft,
+        .center,
+        .sideRight {
+            min-height: 50px;
+            /* 暫時先撐開看看 */
+            padding: 8px;
+            border: 1px dashed #999;
+            /* 幫助你看到區塊範圍 */
+        }
+
         /* 滑鼠懸停時顯示 tooltip（桌機用） */
         .tooltip-word:hover .tooltip-box {
             visibility: visible;
@@ -316,7 +326,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>10</p>
+            <p>11</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
