--- a/news.html
+++ b/news.html
@@ -9,16 +9,6 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         /* 頁面框架 */
-        * {
-            box-sizing: border-box;
-        }
-
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-        }
-
         html {
             font-size: clamp(14px, 2vw, 18px);
             background-image: url("images/paper.png");
@@ -92,7 +82,7 @@
             border-bottom-color: #999;
             color: red;
             font-weight: bold;
-            font-size: 1.95rem;
+            font-size: 19pt;
         }
 
         /* tooltip 內容樣式 */
@@ -130,16 +120,6 @@
             font-size: 2rem;
             /* 輕微陰影提升可讀性 */
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-        }
-
-        .sideLeft,
-        .center,
-        .sideRight {
-            min-height: 50px;
-            /* 暫時先撐開看看 */
-            padding: 8px;
-            border: 1px dashed #999;
-            /* 幫助你看到區塊範圍 */
         }
 
         /* 滑鼠懸停時顯示 tooltip（桌機用） */
@@ -326,7 +306,7 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>11</p>
+            <p>12</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
