--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
     <style>
         /* 頁面框架 */
         html {
-            font-size: clamp(14px, 2vw, 18px);
+            /* font-size: clamp(14px, 2vw, 18px); */
             background-image: url("images/paper.png");
         }
 
@@ -60,9 +60,7 @@
 
         a {
             text-decoration: none;
-            /* font-size: 2rem; */
             word-break: break-all;
-            /*  overflow-wrap: break-word; */
         }
 
         /* 原本樣式 */
@@ -138,6 +136,7 @@
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
             z-index: 999;
             transition: background-color 0.2s ease;
+            font-size: 2rem;
         }
 
         .floating-home-btn:hover {
@@ -302,7 +301,8 @@
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
-            <p>15</p>
+            <p>2025/07/05</p>
+            <p>02:18:14</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
