--- a/news.html
+++ b/news.html
@@ -111,7 +111,7 @@
             /* padding 包含在寬度內 */
             box-sizing: border-box;
             /* 字體大小 */
-            font-size: 1rem;
+            font-size: 0.99rem;
             /* 輕微陰影提升可讀性 */
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
         }
@@ -166,7 +166,11 @@
                 board: ["boards"],
                 "mobile device": ["mobile device", "Mobile Device"],
                 "cellphone": ["cellphone", "cellphones"],
+                "strict": ["stricter", "strict"],
+                "regulation": ["regulations", "regulation"],
+                "grade": ["grades", "grade"],
                 ttest: ["ttest"]
+
             };
 
             const definitions = {
@@ -239,7 +243,7 @@
                 "manage rules": "意指學校或各班級有權制訂\n學生使用手機的相關規定。",
                 "subject to": "取決於/視...而定(此片語用法為CEF-C2級)",
                 "approval": "v. 贊成/同意/核准",
-                "overregulation": "over + regulation：n. 過度管制",
+                "overregulation": "over + regulation：n. 過度管制/規範",
                 "EdYouth": "EdYouth是在2022年創立的學生團體\n聚焦關注課綱議題並以對上倡議",
                 "statement": "n. (正式的)聲明/說明/表態",
                 "usage": "n. 使用",
@@ -253,6 +257,10 @@
                 "In other education news": "在其他教育相關新聞中",
                 "permission": "n. 允許",
                 "mobile device": "mobile: adj. 可移動的。\nmobile device 可攜帶裝置",
+                "college": "n. 大學",
+                "strict": "strict: adj. 嚴格的，此為比較級stricter",
+                "regulation": "n. 規範/規則/法規",
+                "grade": "(職位、技巧、程度)等級/年級\nlower grade此指學校低年級",
                 ttest: "test"
             };
 
@@ -302,7 +310,7 @@
         <div class="sideLeft textCenter">
             <p>Update Time</p>
             <p>2025/07/05</p>
-            <p>13:50:58</p>
+            <p>02:50:12</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
